--- a/imc-calculator/src/App.css
+++ b/imc-calculator/src/App.css
@@ -1,38 +1,50 @@
-.App {
-  text-align: center;
+.container {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h1 {
+  font-size: 50px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+span {
+  margin-top: 18px;
+  margin-bottom: 24px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.input {
+  width: 500px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.input input {
+  width: 100%;
+  margin-bottom: 12px;
+  height: 46px;
+  background-color: #f9f9f9;
+  border: 0;
+  border-radius: 6px;
+  color: black;
+  padding: 0 12px;
+  font-size: 18px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.input button {
+  width: 100%;
+  height: 46px;
+  border: 0;
+  border-radius: 6px;
+  background-color: #357aff;
+  color: #fff;
+  font-size: 18px;
+}
+
+h2 {
+  margin-top: 28px;
 }
